--- a/intro.html
+++ b/intro.html
@@ -5,9 +5,11 @@
 </head>
 
 <body>
-    <div class="typewriter">
-        <h1>The cat and the hat.</h1>
-      </div>
+    <div id='animDiv' class="typewriter skeleton">
+        <h1 id='anim'>> Hey there, I'm IP!</h1>
+    </div>
 </body>
+
+<script src="intro.js"></script>
 
 </html>
